--- a/src/app/modules/mastic-work/mastic-work-data-entry/mastic-work-data-entry.component.html
+++ b/src/app/modules/mastic-work/mastic-work-data-entry/mastic-work-data-entry.component.html
@@ -124,26 +124,26 @@
 
 
                 <c-row class="mb-3">
-                    <label cLabel class="col-sm-2" for="masticQuantity">Mastic Quantity (sq. m.)</label>
+                    <label cLabel class="col-sm-2" for="masticQuantity">Mastic Area Attended (sq. m.)</label>
                     <c-col [sm]="8">
                         <input cFormControl id="masticQuantity" formControlName="masticQuantity" type="number" />
-                        <c-form-feedback [valid]="false">Please provide the Mastic Quantity</c-form-feedback>
+                        <c-form-feedback [valid]="false">Please provide the Mastic Area</c-form-feedback>
                     </c-col>
                 </c-row>
 
                 <c-row class="mb-3">
-                    <label cLabel class="col-sm-2" for="dbmQuantity">DBM Quantity (sq. m.)</label>
+                    <label cLabel class="col-sm-2" for="dbmQuantity">DBM Area Attended (sq. m.)</label>
                     <c-col [sm]="8">
                         <input cFormControl id="dbmQuantity" formControlName="dbmQuantity" type="number" />
-                        <c-form-feedback [valid]="false">Please provide the DBM Quantity</c-form-feedback>
+                        <c-form-feedback [valid]="false">Please provide the DBM Are</c-form-feedback>
                     </c-col>
                 </c-row>
 
                 <c-row class="mb-3">
-                    <label cLabel class="col-sm-2" for="wmmQuantity">WMM Quantity (sq. m.)</label>
+                    <label cLabel class="col-sm-2" for="wmmQuantity">WMM Area Attended (sq. m.)</label>
                     <c-col [sm]="8">
                         <input cFormControl id="wmmQuantity" formControlName="wmmQuantity" type="number" />
-                        <c-form-feedback [valid]="false">Please provide the WMM Quantity</c-form-feedback>
+                        <c-form-feedback [valid]="false">Please provide the WMM Attended</c-form-feedback>
                     </c-col>
                 </c-row>
                 <c-row class="mb-3">
