--- a/src/app/modules/dashboard/pothole-dashboard/pothole-dashboard.component.html
+++ b/src/app/modules/dashboard/pothole-dashboard/pothole-dashboard.component.html
@@ -1,7 +1,7 @@
 <c-col xs="12">
     <c-card class="mb-4">
         <c-card-body>
-            <h5>Azure 2-sep 2024  Testing Dashboard</h5>
+            <h5>Pothole Testing Dashboard</h5>
 
               <app-widgets> </app-widgets>
 
